--- a/eCommerce/store/templates/store.html
+++ b/eCommerce/store/templates/store.html
@@ -3,6 +3,8 @@
 {% block content %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
-<h3>Store</h3>
+<body>
+    <h3>Store</h3>
+</body>
 
 {% endblock content %}
