--- a/eCommerce/store/templates/main.html
+++ b/eCommerce/store/templates/main.html
@@ -2,31 +2,34 @@
 {% load static %}
 <html>
     <head>
-        <title>Ecom</title>
+        <title>eCommerce</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
 
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'store' %}">Ecom</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>  
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-                <div class="form-inline my-2 my-lg-0">
-                    <a href="#"class="btn btn-warning">Login</a>
-                    
-                    <a href="">
-                        <img  id="cart-icon" src="{% static 'images/cart.png' %}">
-                    </a>
-                    <p id="cart-total">0</p>
+            <div class="container">
+                <a class="navbar-brand" href="{% url 'store' %}">eCommerce</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>  
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{% url 'store' %}">Store <span class="sr-only">(current)</span></a>
+                        </li>
+                    </ul>
+                    <div class="form-inline my-2 my-lg-0">
+                        <a href="#"class="btn">Iniciar sesión / Registrarse</a>
+                        
+                        <a href="">
+                            <img src="{% static 'images/cart.svg' %}" width="25px" style="display: inline-block; margin-left: 15px;">
+                        </a>
+
+                    </div>
                 </div>
             </div>
         </nav>
